After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 707563 - Crash with BadValue when running under VirtualBox (XRRChangeOutputProperty)
Crash with BadValue when running under VirtualBox (XRRChangeOutputProperty)
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2013-09-05 13:15 UTC by Colin Guthrie
Modified: 2013-09-11 21:29 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
MonitorXrandr: Mask a BadValue error on VirtualBox. (1.04 KB, patch)
2013-09-05 13:17 UTC, Colin Guthrie
committed Details | Review

Description Colin Guthrie 2013-09-05 13:15:57 UTC
The XRRChangeOutputProperty call will sometimes return a BadValue exception when running under VirtualBox (noticed with the current latest 4.2.16 + kernel 3.9.8).

This is an uncaught exception and results in mutter (and thus gnome-shell) crashing.

I will attach a patch that masks this problem.
Comment 1 Colin Guthrie 2013-09-05 13:17:56 UTC
Created attachment 254180 [details] [review]
MonitorXrandr: Mask a BadValue error on VirtualBox.
Comment 2 Giovanni Campagna 2013-09-06 16:19:11 UTC
Review of attachment 254180 [details] [review]:

I still don't know why it would report BadValue, but this looks good to me.
Comment 3 drago01 2013-09-11 21:29:49 UTC
Attachment 254180 [details] pushed as 4883b96 - MonitorXrandr: Mask a BadValue error on VirtualBox.