MonitorXrandr: Mask a BadValue error on VirtualBox.

https://bugzilla.gnome.org/show_bug.cgi?id=707563